@startuml

title __BOARDELEMENTS's Class Diagram__\n

  package BoardElements {
    class Belt {
        + Belt()
        {static} + doBelt()
    }
  }
  

  package BoardElements {
    abstract class BeltElement {
        + BeltElement()
        {static} + checkConveyor()
        {static} + canMoveConveyor()
        {static} + moveConveyor()
    }
  }
  

  package BoardElements {
    abstract class BoardElement {
        {static} # map : GameMap
        + BoardElement()
        {static} + rotate_right()
        {static} + rotate_left()
    }
  }
  

  package BoardElements {
    class ExpressBelt {
        + ExpressBelt()
        {static} + doExpressBelt()
    }
  }
  

  package BoardElements {
    class Spin {
        + Spin()
        {static} + doSpin()
    }
  }
  

  Belt -up-|> BeltElement
  BeltElement -up-|> BoardElement
  ExpressBelt -up-|> BeltElement
  Spin -up-|> BoardElement


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
